--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@200;300&family=Sorts+Mill+Goudy:ital@0;1&display=swap");
 .App {
   text-align: center;
+  align-items: center;
+}
+* {
+  font-family: "Cinzel", serif;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.nav {
+  background-color: ghostwhite;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -25,7 +33,8 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: gainsboro;
+  font-family: "Cinzel", serif;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +44,29 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  border: black 1px solid;
+  box-shadow: 2px 6px;
+  border-radius: 30px;
+  margin-bottom: 20px;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding: 2%;
+  font-family: "Cinzel", serif;
+}
+
+.modal {
+  border: black 2px solid;
+  width: 500px;
+  background-color: seashell;
+}
+
+.btn {
+  padding: 5px;
+  margin: 3px;
+  display: flex;
+  background-color: #282c34;
+  color: aliceblue;
 }
